# keyball

qmk_firmware/keyboards/keyball/keyball39/: config.h
qmk_firmware/keyboards/keyball/keyball39/keymaps/myvia/: config.h  keymap.c  rules.mk
qmk_firmware/keyboards/keyball/keyball39/keymaps/myvia/logofont/: font.md  logofont.c
qmk_firmware/keyboards/keyball/lib/keyball/: keyball.c  keyball.h
qmk_firmware/keyboards/keyball/lib/logofont/: font.md
zq/: README.md  design.md
zq/tauri/: Cargo.toml  tauri.conf.json
zq/tauri/src/: main.rs
