[package]
name = "zq"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }
rdev = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
